// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar should render properly 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "maxSelect": 7,
      "minSelect": 2,
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Calendar should render properly 2`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "defaultCurrent": Object {
        "month": 10,
      },
      "defaultSelect": Object {
        "end": 2019-12-18T14:41:13.099Z,
        "start": "2019/10/20",
      },
      "formatter": Object {
        "title": [Function],
      },
      "maxSelect": 7,
      "minSelect": 2,
      "onDateSelect": [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "end": "2019-10-06T16:00:00.000Z",
              "start": "2019-10-04T16:00:00.000Z",
            },
          ],
          Array [
            Object {
              "end": "2019-10-06T16:00:00.000Z",
              "start": "2019-10-04T16:00:00.000Z",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Calendar should render properly 3`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "defaultSelect": Object {
        "end": 2019-12-18T14:41:13.139Z,
        "start": false,
      },
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Calendar should render properly 4`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "minSelect": 2,
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;
